# FidelityFX-CLI

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  FidelityFX_CLI.cpp  README.md  pch.cpp  pch.hpp
Shaders/: CAS_main.hlsl  CompiledShader_CAS_NoScaling=0_Linear=0.h  CompiledShader_CAS_NoScaling=0_Linear=1.h  CompiledShader_CAS_NoScaling=1_Linear=0.h  CompiledShader_CAS_NoScaling=1_Linear=1.h  CompiledShader_EASU_Linear=0.h  CompiledShader_EASU_Linear=1.h  CompiledShader_RCAS_Linear=0.h  CompiledShader_RCAS_Linear=1.h  EASU_main.hlsl  FxBatchCompilerScript.fxbc  RCAS_main.hlsl
